[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.6"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (optional, for examples)
reqwest = { version = "0.12", features = ["json"] }

# Environment variables from .env file
dotenvy = "0.15"
